--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://mongo:27017/accounting_db
-JWT_SECRET=tonSecretSecret
+MONGO_URI=mongodb://mongo:27017/accounting-db
+#JWT_SECRET=yourSecretHere
 PORT=5000
