--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,45 @@
 version: '3.8'
 
 services:
-  backend:
-    build:
-      context: ./backend  # Chemin vers ton backend
-    ports:
-      - "5000:5000"        # Expose le port 5000 pour ton backend
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017/accounting_db  # URL de connexion MongoDB
-    depends_on:
-      - mongo               # MongoDB doit démarrer avant le backend
-
   mongo:
-    image: mongo:latest    # Utilise l'image officielle MongoDB
+    image: mongo:latest
+    container_name: mongo
+    restart: always
     ports:
-      - "27017:27017"      # Expose le port 27017 pour MongoDB
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_DATABASE: accounting_db
+    volumes:
+      - mongo-data:/data/db
+
+  backend:
+    build: ./backend
+    container_name: accounting-backend
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - "5000:5000"
+    env_file:
+      - ./backend/.env
+    volumes:
+      - ./backend:/usr/src/app
+    command: npm start
+
+  frontend:
+    build: ./frontend
+    container_name: accounting-frontend
+    restart: always
+    depends_on:
+      - backend
+    ports:
+      - "3000:3000"
+    env_file:
+      - ./frontend/.env
+    volumes:
+      - ./frontend:/usr/src/app
+    stdin_open: true
+    tty: true
+
+volumes:
+  mongo-data:
