--- a/LoginCrud/package.json
+++ b/LoginCrud/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.3.1",
     "logincrud": "file:",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
