--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://mongo:27017/accounting-db
+MONGO_URI=mongodb://localhost:27017/accounting-db
 JWT_SECRET=4g9b32w8Asz2!P6o7N56gT!79Uq+PzxM9Fg5hJqZAz6A5DcfY8w3TgCksM
 PORT=5000
 EMAIL_USER=hamdikbaier8@gmail.com
