--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -19,6 +19,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-modal-video": "^2.0.2",
     "react-paginate": "^8.3.0",
     "react-photo-view": "^1.2.7",
