--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,17 @@ jobs:
         run: npm install
         working-directory: backend
 
-      - name: Run backend tests
-        run: npm test
-        working-directory: backend
+   #   - name: Run backend tests
+    #    run: npm test
+     #   working-directory: backend
 
       - name: Install frontend dependencies
         run: npm install
         working-directory: frontend
 
-      - name: Run frontend tests
-        run: npm test
-        working-directory: frontend
+  #    - name: Run frontend tests
+   #     run: npm test
+    #    working-directory: frontend
 
       - name: Build backend Docker image
         run: |
