--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,16 @@
-name: Full Project CI/CD
+name: CI Pipeline
 
 on:
   push:
     branches:
       - main
       - develop
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  test-and-build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,29 +22,14 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install backend dependencies
+      - name: Install dependencies
         run: npm install
-        working-directory: backend
 
-   #   - name: Run backend tests
-    #    run: npm test
-     #   working-directory: backend
+      - name: Run linting
+        run: npm run lint
 
-      - name: Install frontend dependencies
-        run: npm install
-        working-directory: frontend
+      - name: Run tests
+        run: npm test
 
-  #    - name: Run frontend tests
-   #     run: npm test
-    #    working-directory: frontend
-
-      - name: Build backend Docker image
-        run: |
-         docker build -t hammdi/accounting-backend:latest backend
-         docker push hammdi/accounting-backend:latest
-
-      - name: Build frontend Docker image
-        run: |
-         docker build -t hammdi/accounting-frontend:latest frontend
-         docker push hammdi/accounting-frontend:latest
-
+      - name: Build project
+        run: npm run build
