--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,15 @@
-name: CI Pipeline
+name: Backend CI Pipeline
 
 on:
   push:
     branches:
-      - main
-      - develop
+      - hamdi
   pull_request:
     branches:
-      - main
+      - hamdi
 
 jobs:
-  build-and-test:
+  backend-build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,15 +20,20 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'npm'
 
       - name: Install dependencies
+        working-directory: backend
         run: npm install
 
       - name: Run linting
+        working-directory: backend
         run: npm run lint
 
       - name: Run tests
+        working-directory: backend
         run: npm test
 
       - name: Build project
+        working-directory: backend
         run: npm run build
