--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,12 @@ on:
       - hamdi
 
 jobs:
-  backend-build-and-test:
+  build-and-test:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: backend # Ensures commands run inside the backend folder
 
     steps:
       - name: Checkout repository
@@ -21,19 +25,20 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
 
       - name: Install dependencies
-        working-directory: backend
         run: npm install
+        working-directory: backend
 
       - name: Run linting
-        working-directory: backend
         run: npm run lint
+        working-directory: backend
 
       - name: Run tests
-        working-directory: backend
         run: npm test
+        working-directory: backend
 
       - name: Build project
-        working-directory: backend
         run: npm run build
+        working-directory: backend
