--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,11 @@
 name: Backend CI Pipeline
 
 on:
-  push:
-    branches:
-      - hamdi
-  pull_request:
-    branches:
-      - hamdi
+  push
 
 jobs:
-  build-and-test:
+  backend-build-and-test:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: backend # Ensures commands run inside the backend folder
 
     steps:
       - name: Checkout repository
@@ -25,20 +16,15 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
 
-      - name: Install dependencies
-        run: npm install
-        working-directory: backend
+      - working-directory: backend
+        run: npm run ci
 
-      - name: Run linting
-        run: npm run lint
-        working-directory: backend
+      - working-directory: backend
+        run: npm run build --if-present
 
-      - name: Run tests
+      - working-directory: backend
         run: npm test
-        working-directory: backend
 
-      - name: Build project
-        run: npm run build
-        working-directory: backend
+
+
