--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,12 @@
 name: Backend CI Pipeline
 
 on:
-  push
+  push:
+    branches:
+      - hamdi
+  pull_request:
+    branches:
+      - hamdi
 
 jobs:
   backend-build-and-test:
@@ -16,21 +21,20 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
 
-      - name: Install dependencies and build
-        working-directory: backend
+      - name: Install dependencies
         run: npm install
+        working-directory: backend
 
       - name: Run tests and coverage report
-       
-      - working-directory: backend
         run: npm run ci
+        working-directory: backend
 
-      - working-directory: backend
+      - name: Build project
         run: npm run build --if-present
+        working-directory: backend
 
-      - working-directory: backend
+      - name: Run tests
         run: npm test
-
-
-
+        working-directory: backend
