--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ name: Backend CI Pipeline
 on:
   push:
     branches:
-      - hamdi
+      - main
+      - develop
+      - hamdi  # Ajout de ta branche spécifique
   pull_request:
     branches:
-      - hamdi
+      - main
 
 jobs:
   backend-build-and-test:
@@ -21,20 +23,19 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
 
       - name: Install dependencies
+        working-directory: backend
         run: npm install
-        working-directory: backend
 
-      - name: Run tests and coverage report
-        run: npm run ci
+      - name: Run linting
         working-directory: backend
-
-      - name: Build project
-        run: npm run build --if-present
-        working-directory: backend
+        run: npm run lint
 
       - name: Run tests
-        run: npm test
         working-directory: backend
+        run: npm test
+
+      - name: Build project
+        working-directory: backend
+        run: npm run build --if-present
