--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,17 +25,17 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        working-directory: backend
         run: npm install
+        working-directory: backend  # Ajout du bon répertoire
 
       - name: Run linting
-        working-directory: backend
         run: npm run lint
+        working-directory: backend
 
       - name: Run tests
-        working-directory: backend
         run: npm test
+        working-directory: backend
 
       - name: Build project
-        working-directory: backend
         run: npm run build --if-present
+        working-directory: backend
