--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
-        working-directory: backend  # Ajout du bon répertoire
+        run: npm install --no-audit --no-fund
+        working-directory: backend
+
 
       - name: Run linting
         run: npm run lint
