--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,18 +25,17 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install --no-audit --no-fund
         working-directory: backend
-
+        run: npm install
 
       - name: Run linting
-        run: npm run lint
         working-directory: backend
+        run: npm run lint
 
       - name: Run tests
-        run: npm test
         working-directory: backend
+        run: npm test
 
       - name: Build project
-        run: npm run build --if-present
         working-directory: backend
+        run: npm run build --if-present
