--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,16 @@ on:
     branches:
       - main
       - develop
+      - hamdi
   pull_request:
     branches:
       - main
+      - develop
 
 jobs:
-  build-and-test:
+  backend:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,14 +24,34 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install and build backend
+        working-directory: ./backend
+        run: |
+          npm install
+          npm install -g nodemon
 
-      - name: Run linting
-        run: npm run lint
+      - name: Create env file
+        working-directory: ./backend
+        run: |
+          echo "MONGODB_URI=mongodb://localhost:27017/accounting" > .env
+          echo "JWT_SECRET=your-secret-key" >> .env
+          echo "PORT=5000" >> .env
 
-      - name: Run tests
-        run: npm test
+  frontend:
+    runs-on: ubuntu-latest
+    needs: backend
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Build project
-        run: npm run build
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install and build frontend
+        working-directory: ./frontend
+        run: |
+          npm install
+          CI=false npm run build
