--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "twilio": "^5.4.5"
   }
 }
