--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,24 +7,29 @@ services:
     restart: always
     ports:
       - "27017:27017"
-    environment:
-      MONGO_INITDB_DATABASE: accounting_db
     volumes:
-      - mongo-data:/data/db
+      - mongodb_data:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password123
+    command: mongod --quiet --logpath /dev/null
+    user: "1000:1000"  # Run as non-root user
 
   backend:
     build: ./backend
     container_name: accounting-backend
     restart: always
-    depends_on:
-      - mongo
     ports:
       - "5000:5000"
-    env_file:
-      - ./backend/.env
+    environment:
+      - MONGO_URI=mongodb://admin:password123@mongo:27017/accounting?authSource=admin
+      - PORT=5000
+      - NODE_ENV=development
+    depends_on:
+      - mongo
     volumes:
       - ./backend:/usr/src/app
-    command: npm start
+      - /usr/src/app/node_modules
 
   frontend:
     build: ./frontend
@@ -42,4 +47,5 @@ services:
     tty: true
 
 volumes:
-  mongo-data:
+  mongodb_data:
+    driver: local
