--- a/frontendv2/package.json
+++ b/frontendv2/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@syncfusion/ej2": "^28.2.9",
+    "@syncfusion/ej2-base": "^29.1.33",
     "@syncfusion/ej2-react-calendars": "^28.2.9",
-    "@syncfusion/ej2-react-charts": "^28.2.9",
+    "@syncfusion/ej2-react-charts": "^28.2.11",
     "@syncfusion/ej2-react-dropdowns": "^28.2.9",
-    "@syncfusion/ej2-react-grids": "^28.2.9",
+    "@syncfusion/ej2-react-grids": "^28.2.12",
     "@syncfusion/ej2-react-inputs": "^28.2.9",
     "@syncfusion/ej2-react-kanban": "^28.2.3",
     "@syncfusion/ej2-react-popups": "^28.2.9",
