--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.3.40",
     "bcryptjs": "^3.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.21",
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "twilio": "^5.4.5"
