--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.3.40",
     "bcryptjs": "^3.0.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
@@ -19,6 +20,7 @@
     "langchain": "^0.3.21",
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
-    "twilio": "^5.4.5"
+    "twilio": "^5.4.5",
+    "xlsx": "^0.18.5"
   }
 }
