--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "datatables.net-dt": "^2.1.8",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "gapi-script": "^1.2.0",
     "highlight.js": "^11.10.0",
     "html2canvas": "^1.4.1",
     "isotope-layout": "^3.0.6",
@@ -53,7 +54,8 @@
     "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
