--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "twilio": "^5.4.5",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   }
 }
