--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
+    "winston": "^3.17.0",
     "wowjs": "^1.1.3",
     "xlsx": "^0.18.5"
   },
