--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,19 @@ services:
     stdin_open: true
     tty: true
 
+  ollama:
+    image: ollama/ollama
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    restart: unless-stopped
+    tty: true
+    entrypoint: /bin/bash
+    command: -c "ollama serve & sleep 5 && ollama pull llama3 && wait"
+
 volumes:
   mongodb_data:
     driver: local
+  ollama_data:
