--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "csv-parser": "^3.2.0",
     "langchain": "^0.3.21",
     "mongodb": "^6.15.0"
-
+  },
+  "devDependencies": {
+    "eslint": "^9.26.0"
   }
 }
