--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,10 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
+        
+      - name: Run linting
+        run: npm run lint
+        
       - name: Run tests
         run: npm test
 
