--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,13 @@
-name: CI Pipeline
+name: Build and Test
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [ main, hamdi ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, hamdi ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,13 +20,22 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
-        
-      - name: Run linting
-        run: npm run lint
-        
+        run: |
+          cd frontend
+          npm install
+          cd ../backend
+          npm install
+
       - name: Run tests
-        run: npm test
+        run: |
+          cd frontend
+          npm test
+          cd ../backend
+          npm test
 
       - name: Build project
-        run: npm run build
+        run: |
+          cd frontend
+          npm run build
+          cd ../backend
+          npm run build
