--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,8 +62,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -87,6 +86,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@iconify/react": "^5.0.2",
     "eslint": "^8.57.1",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
     "sass": "^1.71.1",
     "webpack": "^5.90.3"
   }
