--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@langchain/community": "^0.3.40",
     "csv-parser": "^3.2.0",
     "langchain": "^0.3.21",
-    "mongodb": "^6.15.0"
-
+    "mongodb": "^6.15.0",
+    "react-icons": "^5.5.0"
   }
 }
