--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "datatables.net": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
     "date-fns": "^4.1.0",
+    "driver.js": "^1.3.5",
     "flatpickr": "^4.6.13",
     "gapi-script": "^1.2.0",
     "highlight.js": "^11.10.0",
