--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,22 @@
-# Use an official Node.js runtime as a parent image
-FROM node:16
+# Build stage
+FROM node:18 as builder
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to install dependencies
 COPY package*.json ./
-
-# Install the dependencies
 RUN npm install
 
-# Copy the rest of the application files to the container
 COPY . .
-
-# Build the React app for production
 RUN npm run build
 
-# Expose the port the app will run on
-EXPOSE 3000
+# Production stage
+FROM nginx:alpine
 
-# Start the React app
-CMD ["npm", "start"]
+COPY --from=builder /app/build /usr/share/nginx/html
+
+# Copy nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
