--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ FROM node:18 as builder
 WORKDIR /app
 
 COPY package*.json ./
+COPY package-lock.json ./
 RUN npm install
 
 COPY . .
@@ -12,11 +13,14 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
+# Copy the build files
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Copy nginx config
+# Copy the nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Expose port 80
 EXPOSE 80
 
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
