--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,23 +2,31 @@ server {
     listen 80;
     server_name _;
 
+    # Add CORS headers
+    add_header 'Access-Control-Allow-Origin' 'https://accounting-management-4twin9-production.up.railway.app';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html;
         try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
-        proxy_pass http://accounting-management-4twin9-production.up.railway.app;
+        proxy_pass https://accounting-management-4twin9-production.up.railway.app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
+    error_page 404 /index.html;
+    location = /404.html {
         root /usr/share/nginx/html;
     }
 }
