--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "datatables.net": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
     "date-fns": "^4.1.0",
+    "driver.js": "^1.3.5",
     "flatpickr": "^4.6.13",
     "gapi-script": "^1.2.0",
     "highlight.js": "^11.10.0",
@@ -34,6 +35,7 @@
     "jquery": "^3.7.1",
     "jspdf": "^3.0.0",
     "jsvectormap": "1.3.1",
+    "multer": "^1.4.5-lts.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -86,6 +88,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@iconify/react": "^5.0.2",
     "eslint": "^8.57.1",
+    "eslint-plugin-prettier": "^5.2.6",
+    "prettier": "^3.5.3",
     "sass": "^1.71.1",
     "webpack": "^5.90.3"
   }
