--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://hmaidiala3210:tyCJIY47krilbxxn@cluster0.ih7dukp.mongodb.net/accounting-db?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://hmaidiala3210:rMes6kyTmuhjTElZ@cluster0.jc4emck.mongodb.net/accounting?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET=4g9b32w8Asz2!P6o7N56gT!79Uq+PzxM9Fg5hJqZAz6A5DcfY8w3TgCksM
 PORT=5000
 EMAIL_USER=hamdikbaier8@gmail.com
